--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,6 +37,9 @@ layout: default
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
 
+  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+</article>
+
 <script src="https://utteranc.es/client.js"
         repo="melon-jy/melon-jy.github.io"
         issue-term="title"
