폰트와 백그라운드1

--- a/_sass/minima/skins/auto.scss
+++ b/_sass/minima/skins/auto.scss
@@ -16,11 +16,11 @@ $lm-brand-color-dark:      darken($lm-brand-color, 25%) !default;
 
 $lm-site-title-color:      $lm-brand-color-dark !default;
 
-$lm-text-color:            #005c00 !default;
-$lm-background-color:      #999999 !default;
+$lm-text-color:            #9cff9c !default;
+$lm-background-color:      #242424 !default;
 $lm-code-background-color: #000000 !default;
 
-$lm-link-base-color:       #9cff9c !default;
+$lm-link-base-color:       #e2f1e2 !default;
 $lm-link-visited-color:    darken($lm-link-base-color, 15%) !default;
 $lm-link-hover-color:      $lm-text-color !default;
 
