폰트와 백그라운드1 시간5

--- a/_sass/minima/skins/auto.scss
+++ b/_sass/minima/skins/auto.scss
@@ -20,7 +20,7 @@ $lm-text-color:            #e2f1e2 !default;
 $lm-background-color:      #000000 !default;
 $lm-code-background-color: #242424 !default;
 
-$lm-link-base-color:       #005c00 !default;
+$lm-link-base-color:       #00aa00 !default;
 $lm-link-visited-color:    darken($lm-link-base-color, 15%) !default;
 $lm-link-hover-color:      $lm-text-color !default;
 
