--- a/_sass/minima/skins/auto.scss
+++ b/_sass/minima/skins/auto.scss
@@ -17,8 +17,8 @@ $lm-brand-color-dark:      darken($lm-brand-color, 25%) !default;
 $lm-site-title-color:      #9cff9c !default;
 
 $lm-text-color:            #e2f1e2 !default;
-$lm-background-color:      #000000 !default;
-$lm-code-background-color: #242424 !default;
+$lm-background-color:      #252525 !default;
+$lm-code-background-color: #e2f1e2 !default;
 
 $lm-link-base-color:       #9cff9c !default;
 $lm-link-visited-color:    darken($lm-link-base-color, 15%) !default;
