폰트와 백그라운드1 시간18

--- a/_sass/minima/skins/auto.scss
+++ b/_sass/minima/skins/auto.scss
@@ -18,7 +18,7 @@ $lm-site-title-color:      #9cff9c !default;
 
 $lm-text-color:            #e2f1e2 !default;
 $lm-background-color:      #252525 !default;
-$lm-code-background-color: #e2f1e2 !default;
+$lm-code-background-color: #000000 !default;
 
 $lm-link-base-color:       #9cff9c !default;
 $lm-link-visited-color:    darken($lm-link-base-color, 15%) !default;
