--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
         <p class="feed-subscribe">
           <a href="{{ 'feed.xml' | relative_url }}">
             <svg class="svg-icon orange">
-              <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
+              <use xlink:href="{{ 'https://twip.kr/twitch_melon_' | relative_url }}"></use>
             </svg><span>Subscribe</span>
           </a>
         </p>
