--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -19,7 +19,7 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family 's-core Dream 9';
   color: $text-color;
   background-color: $background-color;
   -webkit-text-size-adjust: 100%;
