--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -1,5 +1,6 @@
 html {
   font-size: $base-font-size;
+  font-family: 's-core dream9';
 }
 
 /**
@@ -19,7 +20,7 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family 's-core Dream 9';
+  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family ;
   color: $text-color;
   background-color: $background-color;
   -webkit-text-size-adjust: 100%;
