--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -32,8 +32,8 @@
   position: absolute;
   top: 9px;
   right: $spacing-unit / 2;
-  background-color: $background-color;
-  border: 1px solid $border-color-01;
+  background-color: #e1e1e1;
+  border: 9px solid $border-color-01;
   border-radius: 5px;
   text-align: right;
 
