layout border 수정1

--- a/_sass/minima/skins/auto.scss
+++ b/_sass/minima/skins/auto.scss
@@ -24,7 +24,7 @@ $lm-link-base-color:       #9cff9c !default;
 $lm-link-visited-color:    darken($lm-link-base-color, 0%) !default;
 $lm-link-hover-color:      #9cff9c($lm-text-color, 0%) !default;
 
-$lm-border-color-01:       $lm-brand-color-light !default;
+$lm-border-color-01:       #9cff9c !default;
 $lm-border-color-02:       lighten($lm-brand-color, 35%) !default;
 $lm-border-color-03:       $lm-brand-color-dark !default;
 
