--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -3,7 +3,7 @@
  */
 .site-header {
   border-top: 5px solid $border-color-03;
-  border-bottom: 1px solid $border-color-01;
+  border-bottom: 5px solid $border-color-01;
   min-height: $spacing-unit * 1.865;
   line-height: $base-line-height * $base-font-size * 2.25;
 
@@ -32,7 +32,7 @@
   position: absolute;
   top: 9px;
   right: $spacing-unit / 2;
-  background-color: #e1e1e1;
+  background-color: #9cff9c;
   border: 9px solid $border-color-01;
   border-radius: 5px;
   text-align: right;
