scd 크기 조절중

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -1,6 +1,6 @@
 html {
   font-size: $base-font-size;
-  font-family: 's-core dream 7';
+  font-family: 's-core dream 6';
 }
 
 /**
@@ -28,6 +28,7 @@ body {
      -moz-font-feature-settings: "kern" 1;
        -o-font-feature-settings: "kern" 1;
           font-feature-settings: "kern" 1;
+          font-family: 'S-Core Dream 4';
   font-kerning: normal;
   display: flex;
   min-height: 100vh;
@@ -80,7 +81,6 @@ figure > img {
 
 figcaption {
   font-size: $small-font-size;
-  font-family: 's-core dream 7';
 }
 
 
@@ -145,7 +145,6 @@ blockquote {
   padding-left: $spacing-unit / 2;
   @include relative-font-size(1.125);
   font-style: italic;
-  font-family: 's-core dream 7';
 
   > :last-child {
     margin-bottom: 0;
