--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -315,6 +315,7 @@
       min-width: 41px;
       text-align: center;
       box-sizing: border-box;
+      float: Left;
     }
     div {
       display: block;
